# IoT_20232

./: README.md
Firmware/Gateway/: CMakeLists.txt
Firmware/Gateway/certs/: client.crt  client.key  mosquitto.org.crt
Firmware/Gateway/common/ble/: ble_hadilao.c  ble_hadilao.h
Firmware/Gateway/common/cfg_hadilao/: CMakeLists.txt  common_hadilao.h
Firmware/Gateway/common/input/: CMakeLists.txt
Firmware/Gateway/common/input_hadilao/: CMakeLists.txt
Firmware/Gateway/common/interface_hadilao/: CMakeLists.txt  button_hadilao.c  led_hadilao.h
Firmware/Gateway/common/mqtt_hadilao/: CMakeLists.txt  mqtt_hadilao.c
Firmware/Gateway/common/output_hadilao/: output_hadilao.h
Firmware/Gateway/common/uart/: CMakeLists.txt  uart_hadilao.c
Firmware/Gateway/common/webserver/: web_hadilao.c
Firmware/Gateway/main/: CMakeLists.txt  app_main.c
Firmware/Node_CoAP/: CMakeLists.txt  component.mk  sdkconfig  sdkconfig.old
Firmware/Node_CoAP/main/: CMakeLists.txt  app_main.c
Firmware/Node_MQTT/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/Node_MQTT/common/uart_hadilao/: CMakeLists.txt
Firmware/Node_MQTT/main/: CMakeLists.txt  app_main.c
Hardware/: 1.POWER.SchDoc  2.RELAY.SchDoc  3.MCU.SchDoc  4.SENSOR.SchDoc  GEN.SchDoc  IOT.PcbDoc  IOT_20232.PrjPcb
Hardware/IOT_20232/: 1.POWER.SchDoc  3.MCU.SchDoc  IOT_20232.PrjPcbStructure
Hardware/IOT_20232/__Previews/: 1.POWER.SchDocPreview  2.RELAY.SchDocPreview  3.MCU.SchDocPreview  4.SENSOR.SchDocPreview  GEN.SchDocPreview
Hardware/Project Outputs for IOT_20232/: IOT_20232.xlsx
Hardware_v2/IoT_v2/: Driver.SchDoc  IOT_v2.PcbDoc  IoT_v2.PrjPcb  MCU.SchDoc  Power.SchDoc  Sensor.SchDoc
(+37 files in other folders)
